Metodo de pago agregado

--- a/css/home.css
+++ b/css/home.css
@@ -16,9 +16,7 @@ html {
     display: block;
     text-align: center;
     text-transform: uppercase;
-    padding: 35px auto 40px auto;
-    margin: 20px;
-    
+    padding: 50px;
 }
 
 .hero{
