--- a/css/login-registro.css
+++ b/css/login-registro.css
@@ -41,7 +41,7 @@ main{
 }
 
 .caja_trasera div{
-    margin: 100px 40px;
+    margin: 60px 40px;
     color: white;
     transition: all 500ms;
 
@@ -60,6 +60,7 @@ margin-top: 30px;
 .caja_trasera button{
     padding: 10px 40px;
     border: 2px solid #fff;
+    border-radius: 15px;
     background: transparent;
     font-size: 14px;
     font-weight: 600;
@@ -86,7 +87,8 @@ margin-top: 30px;
 
 .contenedor_login-register form{
     width: 100%;
-    padding: 80px 20px;
+    padding: 40px 40px;
+    margin-top: 45px;
     background: #fff;
     position: absolute;
     border-radius: 20px;
